Slider lite element: Changed separator to (_) from (-) for ID and changed the respective css.

--- a/lib/css/elements.css
+++ b/lib/css/elements.css
@@ -139,7 +139,7 @@
 /************************* Style for Boxes starts ***********************/
 
 /************************** Style for Slider Lite starts ************************/
-#slider-lite img {
+#slider_lite img {
 	width: 100% !important;
 	height: auto;
 }
